# senior_project

./: CorridorFollow  Odometry  README.md  WhatDoISee  data.txt  dataAssociator.py  filetest.py  odometry_map.txt  real-icp-mattyo.txt  real_scandata.txt
icp_original/: Odometry  Plot.py  data.txt  data2.txt  icp.py  icp_matrix.py  mapdata.txt  mapdata1.txt  mapdata2.txt  merge_map.py  merge_map.txt  rob_pos.txt  scandata.txt  scandata2.txt  test.py  testdata.txt
nodes/: run  run (3rd copy)  run (another copy)  run (copy)
python/: c++topy.py  dataAssociator (new).py  dataAssociator.py  global.txt  test.lsc  test1.py  test2.lsc
python/icp-master/: basicICP.py
python1/: data.txt  dataAssociator.py  odometry_map.py  scandata.txt
python1/test/: dataAssociator2.py  dataAssociator3.py  dataAssociator4.py  dataAssociator5.py
robot/: CMakeLists.txt  Odometry  package.xml  setup.py
robot/launch/: run.launch
robot/nodes/: DumbWander  SW  SW2  TurnClosest  Turnto  magnetic  newSW  newSW~  run
scan_matching/: correspondence.txt  data.txt  dataAssociator (copy).py  dataAssociator.py  icp.py  t.py
