<?xml version="1.0"?>
<package format="2">
  <name>robot</name>
  <version>1.0.0</version>
  <description>
    The example python file launcher for KMUTT Intelligence Robot Programming class
  </description>
  <license>Apache 2.0</license>
  <author email="chayapol.lxze@outlook.com">LXZE</author>
  <maintainer email="chayapol.lxze@outlook.com">LXZE</maintainer>
  <url type="website">http://wiki.ros.org/turtlebot3_example</url>
  <url type="emanual">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/LXZE/ROS_turtle_py</url>
  <url type="bugtracker">https://github.com/LXZE/ROS_turtle_py/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>actionlib</depend>
  <depend>interactive_markers</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>turtlebot3_msgs</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>turtlebot3_bringup</exec_depend>
</package>
